Fix broken/moved links.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -13,12 +13,13 @@ access available the CVS repository for all our significant developers.
 cyclic software at <a href="http://www.cyclic.com/"> http://www.cyclic.com</a>.
 
 <p>Authenticated access is provided via ssh, which you can retrieve from
-<a href="http://www.cs.hut.fi/ssh/">http://www.cs.hut.fi</a>.  ssh should
-build and install without any trouble and the default configuration files
-should be suitable for access to the egcs CVS server.  Packaged versions
-for Debian and RedHat GNU/Linux systems are available from
-<a href="ftp://ftp.replay.com/pub/replay/pub/linux">
-ftp://ftp.replay.com/pub/replay/pub/linux</a>.
+<a href="ftp://ftp.cs.hut.fi/pub/ssh/">ftp://ftp.cs.hut.fi/pub/ssh/</a>.
+ssh should build and install without any trouble and the default
+configuration files should be suitable for access to the egcs CVS
+server.  Packaged versions for Debian and RedHat GNU/Linux systems are
+available from
+<a href="ftp://ftp.replay.com/pub/replay/pub/linux/">
+ftp://ftp.replay.com/pub/replay/pub/linux/</a>.
 
 <p>You will need to provide us with your public key.  You can generate one
 via the "ssh-keygen" program.  This will store your public key in to the
@@ -85,7 +86,7 @@ your changes back in they will automatically be checked out into the
 web server's data area.
 
 <hr>
-<i>Last modified on September 18, 1998.</i>
+<i>Last modified on February  22, 1999.</i>
 
 <hr>
 <a href="/">Return to the egcs home page</a>
