--- a/htdocs/fsf-forms/copyrights.html
+++ b/htdocs/fsf-forms/copyrights.html
@@ -166,7 +166,7 @@ will work with a lawyer to decide what to do.</STRONG>
   with a couple of links added.</i>
 </blockquote>
 
-<p><a href="/egcs/">Return to the egcs home page</a>
+<p><a href="/">Return to the egcs home page</a>
 
 <HR>
 <!--#include virtual="/glimpsebox.html"-->
