Explicitly mention where to find the most current version of this document.

--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -5,6 +5,9 @@
 <body>
 <h1 align="center">Installing egcs</h1>
 
+<p>The latest version of this document is always available at <a href="
+http://egcs.cygnus.com/install/">http://egcs.cygnus.com/install/</a>.
+
 <p>This document describes the generic installation procedure for egcs as
 well as detailing some target specific installation instructions for egcs.
 
@@ -41,6 +44,6 @@ a bug report.
 <hr>
 <a href="../index.html">Return to the egcs home page</a>
 <hr>
-<i>Last modified on May 15, 1998.</i>
+<i>Last modified on February 22, 1999.</i>
 </body>
 </html>
