Fix markup. By Hans-Peter Nilsson <hp@bitrange.com>.

--- a/htdocs/checkin.html
+++ b/htdocs/checkin.html
@@ -139,7 +139,7 @@ local copy was out of date relative to the master sources.
 
 <blockquote>
 <pre>
-[/law/egcs/egcs/gcc] patch < ~/Mail/gcc/pendingpatches/42 
+[/law/egcs/egcs/gcc] patch &lt; ~/Mail/gcc/pendingpatches/42 
 Hmm...  Looks like a new-style context diff to me...
 The text leading up to this was:
 <i>[ uninteresting text deleted ]</i>
@@ -245,19 +245,19 @@ checkin process....
 <blockquote>
 <pre>
 Checking in ChangeLog;
-/egcs/carton/cvsfiles/egcs/./gcc/ChangeLog,v  <--  ChangeLog
+/egcs/carton/cvsfiles/egcs/./gcc/ChangeLog,v  &lt;--  ChangeLog
 new revision: 1.746; previous revision: 1.745
 done
 Checking in bitmap.c;
-/egcs/carton/cvsfiles/egcs/./gcc/bitmap.c,v  <--  bitmap.c
+/egcs/carton/cvsfiles/egcs/./gcc/bitmap.c,v  &lt;--  bitmap.c
 new revision: 1.6; previous revision: 1.5
 done
 Checking in calls.c;
-/egcs/carton/cvsfiles/egcs/./gcc/calls.c,v  <--  calls.c
+/egcs/carton/cvsfiles/egcs/./gcc/calls.c,v  &lt;--  calls.c
 new revision: 1.12; previous revision: 1.11
 done
 Checking in genattrtab.c;
-/egcs/carton/cvsfiles/egcs/./gcc/genattrtab.c,v  <--  genattrtab.c
+/egcs/carton/cvsfiles/egcs/./gcc/genattrtab.c,v  &lt;--  genattrtab.c
 new revision: 1.15; previous revision: 1.14
 done
 [/law/egcs/egcs/gcc] 
