Use GNU/Linux resp. Linux kernel instead of just Linux.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -61,7 +61,7 @@ comp.std.c++ FAQ</a>.
     <li><a href="#X11R6">How do I compile X11 headers with g++</a>  
     <li><a href="#sunos4ld">Linker core dumps on SunOS4</a>
     <li><a href="#axparch">Assembler errors on Alpha targets</a>
-    <li><a href="#sig11">Signal 11 on Linux</a>
+    <li><a href="#sig11">Signal 11 on GNU/Linux</a>
     <li><a href="#bigtoc">Link failures using -bbigtoc on AIX 4.1</a>
     <li><a href="#aixcoff">AIX 4.3 archive libraries ("not a COFF file")</a>
     <li><a href="#aixld">Linker error on AIX 4.3.2</a>
@@ -122,7 +122,7 @@ we want to make with EGCS.
     gcc and an interest in adding new optimizations;
 
   <li>working with the groups who have fractured out from gcc2 (like
-   the Linux folks, the Intel optimizations folks, Fortran folks)
+   the Linux kernel folks, the Intel optimizations folks, Fortran folks)
    including more front-ends; and finally
 
   <li>An open development model (<a
@@ -171,8 +171,8 @@ quality as high as it is today.  Code that could use wider testing may
 be integrated--code that is simply ill-conceived won't be.
 
 <p>EGCS is not the first piece of software to use this open development
-process; FreeBSD, the Emacs lisp repository, and Linux are a few
-examples of the bazaar style of development.
+process; FreeBSD, the Emacs lisp repository, and the Linux kernel are a
+few examples of the bazaar style of development.
 
 <p>With EGCS, we will be adding new features and optimizations at a
 rate that has not been done since the creation of gcc2; these additions
@@ -287,7 +287,7 @@ allowed to exceed the limits unless they are unreasonably huge.
 
 <h2><a name="morelibc">`_IO_stdfile_0_lock' was not declared in this scope</a></h2>
 <p>If you get this error, it means either EGCS incorrectly guessed what version
-of libc is installed on your Linux system, or you incorrectly specified a
+of libc is installed on your GNU/Linux system, or you incorrectly specified a
 version of glibc when configuring EGCS.
 
 <p>If you did not provide a target name when configuring EGCS, then you've
@@ -305,7 +305,7 @@ the install instructions carefully.
 if you are building a cross compiler.
 
 <p>It has also been reported that the Fortran compiler can not be built     
-on Red Hat 4.X Linux for the Alpha.  Fixing this may require upgrading
+on Red Hat 4.X GNU/Linux for the Alpha.  Fixing this may require upgrading
 binutils or to Red Hat 5.0; we'll provide more information as it becomes  
 available.                                                               
 
@@ -604,7 +604,7 @@ with gcc-2.7.2.  They use certain asm constructs which are incorrect, but
 fixes some of the asm problems.  You will also want to change asm constructs
 to <a href="#asmclobber">avoid clobbering their input operands</a>.
 
-<p>If you installed a recent binutils/gas snapshot on your Linux system,
+<p>If you installed a recent binutils/gas snapshot on your GNU/Linux system,
 you may not be able to build the kernel because objdump does not understand
 the "-k" switch.  The solution for this problem is to remove /usr/bin/encaps.
 
@@ -670,8 +670,9 @@ get the latest SunOS4 linker patch (patch ID 100170-10) from Sun's patch site.
 <h2><a name="axparch">Assembler errors on Alpha targets</a></h2>
 
 <p> Error: Unknown pseudo-op:  `.arch'
-<br>Linux/Alpha EV56 or PCA56 hosts running Red Hat 4.2 or 5.0 may see
-errors of this sort.  This is a signal that a new assembler is needed
+
+<br>GNU/Linux Alpha EV56 or PCA56 hosts running Red Hat 4.2 or 5.0 may
+see errors of this sort.  This is a signal that a new assembler is needed
 if you want to generate BWX insns for your machine.
 
 <p>The version shipped with Red Hat 4.2 (2.7.0.2) has a fault wherein
@@ -704,10 +705,10 @@ the assembler, 2.9 or later.  If you can not upgrade the assembler, the
 compiler option "-Wa,-m21164a" may work around this problem.
 
 <hr>
-<h2><a name="sig11">Signal 11 on Linux</a></h2>
-<p> If you receive Signal 11 errors when building on Linux, then it is possible
-you have a hardware problem.  Further information on this can be found on
-<a href="http://www.bitwizard.nl/sig11/">www.bitwizard.nl.</a>
+<h2><a name="sig11">Signal 11 on GNU/Linux</a></h2>
+<p>If you receive Signal 11 errors when building on GNU/Linux, then it is
+possible you have a hardware problem.  Further information on this can be
+found on <a href="http://www.bitwizard.nl/sig11/">www.bitwizard.nl.</a>
 
 <hr>
 <h2><a name="bigtoc">Link failures using -bbigtoc on AIX 4.1</a></h2>
