--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -67,6 +67,10 @@ serious problems in egcs-1.1.1.
 
     <li> Fix multiply defined constructor/destructor symbol problems.
 
+    <li> Avoid setting bogus RPATH environemnt variable during bootstrap.
+
+    <li> Fix minor ISO namespace violation in Alpha varargs/stdarg support.
+
   </ul>
   <li> Platform specific improvements and fixes
   <ul>
