--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -69,8 +69,7 @@ serious problems in egcs-1.1.1.
 
     <li> Avoid setting bogus RPATH environemnt variable during bootstrap.
 
-    <li> Fix minor ISO namespace violation in Alpha varargs/stdarg support.
-
+    <li> Avoid GNU-make dependencies in the texinfo subdir.
   </ul>
   <li> Platform specific improvements and fixes
   <ul>
@@ -107,6 +106,12 @@ serious problems in egcs-1.1.1.
     <li> Fix PIC code generation problems for the SPARC port.
 
     <li> Fix minor bug with LONG_CALLS in PowerPC SVR4 support.
+
+    <li> Fix minor ISO namespace violation in Alpha varargs/stdarg support.
+
+    <li> Fix incorrect "braf" instruction usage for the SH port.
+
+    <li> Fix minor bug in va-sh which prevented its use with -ansi.
 
   </ul>
 </ul>
