Update tag stuff.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -69,17 +69,20 @@ FAQ entry regarding additional tools</a> you may need.  Another
 FAQ entry documents <a href="faq.html#gperf">changes you will likely have
 to make to the gperf utility</a>.
 
-<p> You can check out the egcs-1.0.x release branch with the following command:
+<h3>CVS tags and checkouts</h3>
 
-<pre>	cvs -z 9 co -regcs_1_00_branch egcs</pre>
+<p> You can check out the latest version of the egcs-1.1.x release
+branch with the following command:
+
+<pre>	cvs -z 9 co -regcs_1_1_branch egcs</pre>
 
 <p>By changing the <code>"-r"</code> argument above you can check out
 particular releases or snapshots or the latest snapshot.
 
 <ul>
-  <li> egcs_1_0_2_release
-  <li> egcs_1_0_1_release
-  <li> egcs_1_0_release
+  <li> egcs_1_1_2_release
+  <li> egcs_1_1_1_release
+  <li> egcs_1_1_release
   <li> egcs_ss_yymmdd
   <li> egcs_latest_snapshot
 </ul>
@@ -95,7 +98,7 @@ the web pages.
 <p>Enjoy!
 
 <hr>
-<i>Last modified on February 16, 1999.</i>
+<i>Last modified on February 25, 1999.</i>
 <hr>
 
 <a href="">Return to the egcs home page</a>
