Added egcs timeline

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -131,7 +131,7 @@ href="mirrors.html">mirror sites</a> around the world.
 href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 ftp://egcs.cygnus.com/pub/egcs/releases/</a> and many <a
 href="mirrors.html">mirror sites</a> around the world.
-
+See the <a href="timeline.html">timeline</a> for progress information.
 
 <h2><a name="thanks">Acknowledgements</a></h2>
 
@@ -149,7 +149,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on February  8, 1999.</i>
+<i>Last modified on February 25, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
