Note OpenBSD contribution.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -41,6 +41,13 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>February 25, 1999</b></dt>
+<dd> 
+<a href="mailto:espie@openbsd.org"Marc Espie</a> has donated support for
+OpenBSD on the Alpha, SPARC, x86, and m68k platforms.  Additional targets
+are expected in the future.
+</dd>
+
 <dt><b>January 21, 1999</b></dt>
 <dd> 
 <a href="http://www.cygnus.com/">Cygnus</a> donates support for the PowerPC
