--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,7 +43,7 @@ maintain and improve quality.
 
 <dt><b>February 25, 1999</b></dt>
 <dd> 
-<a href="mailto:espie@openbsd.org"Marc Espie</a> has donated support for
+<a href="mailto:espie@openbsd.org">Marc Espie</a> has donated support for
 OpenBSD on the Alpha, SPARC, x86, and m68k platforms.  Additional targets
 are expected in the future.
 </dd>
