--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -41,6 +41,15 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>February 26, 1999</b></dt>
+<dd> 
+<a href="mailto:rth@cygnus.com">Richard Henderson</a> of
+<a href="http://www.cygnus.com">Cygnus Solutions</a> has donated a major
+rewrite of the 
+<a href="http://egcs.cygnus.com/cfg.html"> control flow analysis pass</a>
+of the compiler.
+</dd>
+
 <dt><b>February 25, 1999</b></dt>
 <dd> 
 <a href="mailto:espie@openbsd.org">Marc Espie</a> has donated support for
@@ -156,7 +165,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on February 25, 1999.</i>
+<i>Last modified on February 26, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
