@cygnus.com -> @egcs.cygnus.com fixes.

--- a/htdocs/announcement.html
+++ b/htdocs/announcement.html
@@ -7,7 +7,7 @@
 From: gumby@cygnus.com (D.V. Henkel-Wallace)
 Subject: A new project to merge the existing GCC forks
 Date: Fri, 15 Aug 1997 16:31:29 -0700
-To: egcs@cygnus.com
+To: egcs@egcs.cygnus.com
 
 A bunch of us (including Fortran, Linux, Intel and RTEMS hackers) have
 decided to start a more experimental development project, just like
@@ -79,7 +79,7 @@ The egcs mailing list at cygnus.com will be used to discuss and
 prioritize these features.
 
 How to join: send mail to <a
-href="mailto:egcs-request@cygnus.com">egcs-request at cygnus.com</a>.
+href="mailto:egcs-subscribe@egcs.cygnus.com">egcs-request at cygnus.com</a>.
 That list is under majordomo.
 
 We have a web page that describes the various mailing lists and has
