--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -77,12 +77,12 @@
 
   <p>When you have all these pieces, bundle them up in a mail message and
   send it to
-  <a href="mailto:egcs-patches@cygnus.com">egcs-patches@cygnus.com</a>.
+  <a href="mailto:egcs-patches@egcs.cygnus.com">egcs-patches@egcs.cygnus.com</a>.
   All patches and related discussion should be sent to the egcs-patches
   mailinglist.
 
 <hr>
-<i>Last modified on January  7, 1999.</i>
+<i>Last modified on February  27, 1999.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
