--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -253,7 +253,7 @@ to the current release first.
 <p>In short, if egcs says <tt>Internal compiler error</tt> (or any
 other error that you'd like us to be able to reproduce, for that
 matter), please mail a bug report to <a
-href="mailto:egcs-bugs@cygnus.com">egcs-bugs@cygnus.com</a> including:
+href="mailto:egcs-bugs@egcs.cygnus.com">egcs-bugs@egcs.cygnus.com</a> including:
 
 <ul>
   <li>The egcs version
@@ -1111,7 +1111,7 @@ only be necessary if you are building anything obtained from CVS.
 
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  February 18, 1999</i>
+<p><i>Last modified:  February 27, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
