--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -91,7 +91,7 @@ of the snapshots are mirrored here.
 </UL>
 
 <p>If you wish to host a new mirror site, please contact
-<a href="mailto:egcs@cygnus.com">egcs@cygnus.com</a>.  Include the
+<a href="mailto:egcs@egcs.cygnus.com">egcs@egcs.cygnus.com</a>.  Include the
 name of the ftp server, the path to the egcs mirror and the country/city
 where the mirror is located.
 
@@ -100,7 +100,7 @@ where the mirror is located.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on February 22, 1999.</i>
+<i>Last modified on February 27, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
