--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -17,16 +17,16 @@ with the --prefix to configure (or /usr/local by default).
 
 <p>If you don't mind, please quickly review the
 <a href="../egcs-1.1/buildstat.html"> build status page.</a> 
-If your system is not listed, send a note to <a href="mailto:egcs@cygnus.com"> 
-egcs@cygnus.com</a> indicating that you successfully built and installed egcs.  Include the output from running <i>srcdir</i>/config.guess.  (Do not send us
+If your system is not listed, send a note to <a href="mailto:egcs@egcs.cygnus.com"> 
+egcs@egcs.cygnus.com</a> indicating that you successfully built and installed egcs.  Include the output from running <i>srcdir</i>/config.guess.  (Do not send us
 the config.guess file itself, just the output from running it!)
 
 <p>If you find a bug in egcs, please report it to
-<a href="mailto:egcs-bugs@cygnus.com">egcs-bugs@cygnus.com</a>.
+<a href="mailto:egcs-bugs@egcs.cygnus.com">egcs-bugs@egcs.cygnus.com</a>.
 
 <p>
 <hr>
-<i>Last modified on November  8, 1998.</i>
+<i>Last modified on February 27, 1998.</i>
 
 </body>
 </html>
