--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -19,7 +19,7 @@ if you are mirroring the egcs pages so we can note it here!
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a>
-<li>UK: <a href="ftp://sunsite.org.uk/Mirrors/sourcware.cygnus.com/pub/egcs/">sunsite.org.uk</a>
+<li>UK: <a href="ftp://sunsite.org.uk/Mirrors/sourceware.cygnus.com/pub/egcs/">sunsite.org.uk</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
