Document enable-cpp

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -113,6 +113,9 @@ egcs.  A partial list of supported <tt>options</tt>:
   <li> <tt>--enable-target-optspace</tt> -- Specify that target libraries should  be optimzied for code space instead of code speed.  This is the default for
   the m32r platform.
 
+  <li> <tt>--enable-cpp</tt> -- Specify that a shell script which emulates
+  traditional cpp functionality should be installed.
+
   <li> <tt>--enable-cpplib</tt> -- Specify that the functionality of CPP should
   be integrated into the compiler itself.  This is still under development, but
   may be useful in limited situations.  This option is never enabled by default.
