Add Fortran news; minor edits

--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -71,14 +71,14 @@ serious problems in egcs-1.1.1.
 
     <li> Avoid GNU-make dependencies in the texinfo subdir.
   </ul>
-  <li> Platform specific improvements and fixes
+  <li> Platform-specific improvements and fixes
   <ul>
     <li> Fix detection of PPro/PII on Unixware 7.
 
     <li> Fix compiler segfault when building spec99 and other programs
 	 for SPARC targets.
 
-    <li> Fix code generation bugs for integer and floating point conditional	
+    <li> Fix code-generation bugs for integer and floating point conditional
 	 move instructions on the PPro/PII.
 
     <li> Use fixincludes to fix byteorder problems on i?86-*-sysv.
@@ -99,11 +99,11 @@ serious problems in egcs-1.1.1.
 
     <li> Fix unrecognized insn problems for the m68k port.
 
-    <li> Fix namespace pollution problem for the x86 port.
+    <li> Fix namespace-pollution problem for the x86 port.
 
     <li> Fix problems with old assembler on x86 NeXT systems.
 
-    <li> Fix PIC code generation problems for the SPARC port.
+    <li> Fix PIC code-generation problems for the SPARC port.
 
     <li> Fix minor bug with LONG_CALLS in PowerPC SVR4 support.
 
@@ -112,6 +112,16 @@ serious problems in egcs-1.1.1.
     <li> Fix incorrect "braf" instruction usage for the SH port.
 
     <li> Fix minor bug in va-sh which prevented its use with -ansi.
+
+  </ul>
+  <li> Fortran-specific fixes
+  <ul>
+    <li> Fix the <SAMP>`Date_and_Time'</SAMP> intrinsic (in
+         <CODE>libg2c</CODE>) to return the milliseconds value properly
+         in <VAR>Values</VAR>(8).
+
+    <li> Fix the <SAMP>`LStat'</SAMP> intrinsic (in <CODE>libg2c</CODE>)
+         to return device-ID information properly in <VAR>SArray</VAR>(7).
 
   </ul>
 </ul>
