--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -246,7 +246,7 @@ Or see the file <a href="/cgi-bin/cvsweb/gcc/BUGS?rev=1.1">BUGS</a> included
 with the egcs source code.
 
 <p>Before you report a bug for the <em>C++ compiler</em>, please check
-the <a href="c++bugs.html">list of well-known C++ bugs</a>. If you
+the <a href="bugs.html">list of well-known bugs</a>. If you
 want to report a bug with <em>egcs 1.0.x</em>, we recommend upgrading
 to the current release first.
 
@@ -818,9 +818,9 @@ if it works for earlier versions of gcc or other compilers.  The
 following problems with some releases of widely used packages have
 been identified:
 
-<p>There is a separate <a href="c++bugs.html">list of well-known C++ bugs</a>
-describing known deficiencies in the <em>C++ compiler</em>. Naturally we'd
-like that list to be of zero length.
+<p>There is a separate <a href="bugs.html">list of well-known bugs</a>
+describing known deficiencies. Naturally we'd like that list to be of
+zero length.
 
 <p>To report a bug, see <a href="#bugreport">How to report bugs</a>.
 
@@ -1111,7 +1111,7 @@ only be necessary if you are building anything obtained from CVS.
 
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  February 27, 1999</i>
+<p><i>Last modified:  March  3, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
