Link in more stuff.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -9,7 +9,14 @@
 
 <ul>
   <li> <a href="gcc_toc.html"> GCC Manual</a>
-
+  <li> <a href="g77_toc.html"> G77 Manual</a>
+  <li> <a href="gxxint.html"> G++ Internals Manual</a>
+  <li> <a href="cpp_toc.html"> CPP Manual</a>
+  <li> <a href="gcov_toc.html"> GCOV Manual</a>
+  <li> <a href="iostream_toc.html"> iostream Manual</a>
+  <li> <a href="chill_toc.html"> Chill Manual</a>
+  <li> <a href="objc-features_toc.html"> ObjC Features</a>
+  <li> <a href="g++FAQ_toc.html"> G++ FAQ</a>
 <hr>
 <a name="glimpsebox"></a>
 <i>Last modified on March 7, 1999.</i>
