Add links to news & bugs sections in the g77 manual.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -10,6 +10,10 @@
 <ul>
   <li> <a href="gcc_toc.html"> GCC Manual</a>
   <li> <a href="g77_toc.html"> G77 Manual</a>
+  <ul> 
+       <li><a href="g77_news.html"> G77 News</a>
+       <li><a href="g77_bugs.html"> G77 Bugs</a>
+  </ul>
   <li> <a href="gxxint.html"> G++ Internals Manual</a>
   <li> <a href="cpp_toc.html"> CPP Manual</a>
   <li> <a href="gcov_toc.html"> GCOV Manual</a>
