--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -14,7 +14,7 @@
        <li><a href="g77_news.html"> G77 News</a>
        <li><a href="g77_bugs.html"> G77 Bugs</a>
   </ul>
-  <li> <a href="gxxint.html"> G++ Internals Manual</a>
+  <li> <a href="gxxint_toc.html"> G++ Internals Manual</a>
   <li> <a href="cpp_toc.html"> CPP Manual</a>
   <li> <a href="gcov_toc.html"> GCOV Manual</a>
   <li> <a href="iostream_toc.html"> iostream Manual</a>
