Move some older news into news.html. Reference g77 news from the main news section.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -77,47 +77,10 @@ Christian Bruel and Jeff Law donate improved
 (SS20) and Sparclite86x (embedded) processors.
 </dd>
 
-<dt><b>December 7, 1998</b></dt>
-<dd>
-<a href="http://www.cygnus.com/">Cygnus</a> donates support for demangling of
-HP aCC symbols.
-</dd>
-
-<dt><b>December 4, 1998</b></dt>
-<dd>
-
-<a href="egcs-1.1/egcs-1.1.1.html"><b>egcs-1.1.1 is released</b></a>.
-</dd>
-
-<dt><b>November 26, 1998</b></dt>
-<dd>
-A <a href="/testresults/">database with test results</a>
-is now available online, thanks to Marc Lehmann.
-</dd>
-
-<dt><b>November 23, 1998</b></dt>
-<dd>
-<tt>egcs</tt> now can dump flow graph information usable for
-<a href="egcs-vcg.html">graphical representation</a>.
-Contributed by Ulrich Drepper.
-</dd>
-
-<dt><b>November 21, 1998</b></dt>
-<dd>
-<a href="http://www.cygnus.com/">Cygnus</a> donates support for the SH4
-processor.
-</dd>
-
-<dt><b>November 10, 1998</b></dt>
-<dd>An official steering committee has been formed. Here is the
-<a href="steering.html">original announcement</a>.
-</dd>
-
 </dl>
 
-<a href="news.html">Further news...</a>
-
-
+<a href="news.html">Older news and announcements...</a>
+<a href="onlinedocs/g77_news.html">Fortran news</a>
 <h2>FAQ</h2>
 
 <p>Got questions about egcs?  Here is <a href="faq.html">our attempt at
@@ -165,7 +128,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on February 26, 1999.</i>
+<i>Last modified on March 7, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
