--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,42 @@ home page</a>.
 
 <dl>
 
+<dt><b>December 7, 1998</b></dt>
+<dd>
+<a href="http://www.cygnus.com/">Cygnus</a> donates support for demangling of
+HP aCC symbols.
+</dd>
+
+<dt><b>December 4, 1998</b></dt>
+<dd>
+
+<a href="egcs-1.1/egcs-1.1.1.html"><b>egcs-1.1.1 is released</b></a>.
+</dd>
+
+<dt><b>November 26, 1998</b></dt>
+<dd>
+A <a href="/testresults/">database with test results</a>
+is now available online, thanks to Marc Lehmann.
+</dd>
+
+<dt><b>November 23, 1998</b></dt>
+<dd>
+<tt>egcs</tt> now can dump flow graph information usable for
+<a href="egcs-vcg.html">graphical representation</a>.
+Contributed by Ulrich Drepper.
+</dd>
+
+<dt><b>November 21, 1998</b></dt>
+<dd>
+<a href="http://www.cygnus.com/">Cygnus</a> donates support for the SH4
+processor.
+</dd>
+
+<dt><b>November 10, 1998</b></dt>
+<dd>An official steering committee has been formed. Here is the
+<a href="steering.html">original announcement</a>.
+</dd>
+
 <dt><b>November 5, 1998</b></dt>
 <dd>The third snapshot of the rewritten <tt>libstdc++</tt> is available.
 You can read some more on <a href="http://sourceware.cygnus.com/libstdc++/">
@@ -144,7 +180,7 @@ framework</b></a>.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on January 13, 1999.</i>
+<i>Last modified on March 7, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
