Put a line break between old news & fortran news

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -79,8 +79,9 @@ Christian Bruel and Jeff Law donate improved
 
 </dl>
 
-<a href="news.html">Older news and announcements...</a>
-<a href="onlinedocs/g77_news.html">Fortran news</a>
+<br><a href="news.html">Older news and announcements...</a>
+<br><a href="onlinedocs/g77_news.html">Fortran news</a>
+
 <h2>FAQ</h2>
 
 <p>Got questions about egcs?  Here is <a href="faq.html">our attempt at
