Reference installation instructions for egcs.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -41,6 +41,12 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>March 7, 1999</b></dt>
+<dd> 
+The egcs project now has 
+<a href="onlinedocs/index.html"> additional online documentation</a>.
+</dd>
+
 <dt><b>February 26, 1999</b></dt>
 <dd> 
 <a href="mailto:rth@cygnus.com">Richard Henderson</a> of
@@ -84,8 +90,16 @@ Christian Bruel and Jeff Law donate improved
 
 <h2>FAQ</h2>
 
-<p>Got questions about egcs?  Here is <a href="faq.html">our attempt at
-answering some of them</a>.  We'll add more later.
+<p>Got questions about egcs?  Please review 
+<a href="faq.html"> the FAQ </a>
+to see if the question has already been answered.
+
+<h2>Online Documentation</h2>
+
+<p>The egcs project now has
+<a href="onlinedocs/index.html">
+online documentation.</a>
+
 
 <h2>Mailing Lists</h2>
 
