Revamp access to development sources stuff a little bit.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -16,12 +16,9 @@ compiler.  If you are new to the egcs project, you should probably read
 the <a href="mission.html"> egcs mission statement </a>.
 
 <p>We want to work closely with contributors to help and encourage
-them to submit their changes for inclusion in egcs. We make regular <a
-href="#snapshots">snapshots</a> publicly available. We provide <a
-href="cvs.html">readonly access via remote-CVS</a> to anyone on the
-net, and <a href="cvswrite.html">read-write access</a> to certain
-external developers in the manner already used in other Free Software
-projects on the net.  All code continues to be <a
+them to submit their changes for inclusion in egcs.  The egcs project
+provides access to its <a href="#development_sources"> development sources</a>
+with weekly snapshots and anonymous CVS.  All code continues to be <a
 href="contribute.html">assigned to the FSF</a> exactly as before and
 is available to the gcc2 maintainers for ultimate inclusion into the
 gcc2 tree.
@@ -107,16 +104,25 @@ online documentation.</a>
 lists?  All the information you need to access the <a href="lists.html">
 mailing lists </a> can be found here. 
 
-<h2><a name=snapshots>Snapshots</a></h2>
+<h2><a name=development_sources>Development snapshots and CVS Access</a></h2>
 
-<p>Snapshots are generated weekly and put up for ftp.  If you are going
-to mess with snapshots, you should definitely be subscribed to the
-<tt>egcs</tt> mailing list.
+<p> The egcs project makes weekly snapshots of its development sources and
+provides remote CVS access to its source tree.
 
 <p>The snapshots are available from
 <a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">
 ftp://egcs.cygnus.com/pub/egcs/snapshots/</a> and many <a
 href="mirrors.html">mirror sites</a> around the world.
+
+<p> <a href="cvs.html">
+Readonly CVS access</a> is available for everyone on the internet, and
+<a href="cvswrite.html"> read-write CVS access</a> is available for major
+contributors.
+
+<p> Be aware that snapshots and CVS provides direct access to development
+sources, which can be unstable at times.  If you are using the development
+sources, we recommend you sign up for one or more of the
+<a href="lists.html"> egcs mailing lists</a>.
 
 
 <h2><a name="releases">Releases</a></h2>
