Reference fortran bugs.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -1,12 +1,19 @@
 <html>
 <head>
-<title>EGCS C++ Frequently Detected Bugs</title>
+<title>EGCS Frequently Detected Bugs</title>
 </head>
 <body>
 <h1 align="center">Frequently reported bugs of the EGCS compilers</h1>
 
 <p>The latest version of this document is always available at <a href="
 http://egcs.cygnus.com/bugs.html">http://egcs.cygnus.com/bugs.html</a>.
+
+<h2>Fortran</h2>
+<p> Fortran bugs are documented in the G77 manual rather than explicitly
+listed here.  Please see <a href="onlinedocs/g77_bugs.html"> "Known
+Causes of Trouble with GNU Fortran"</a> in the
+<a href="onlinedocs/g77_toc.html"> G77 manual.</a>
+
 
 <h2>C++</h2>
 
@@ -151,7 +158,7 @@ void (*fptr)() throw();
 
 <p><a href="index.html">Return to the EGCS home page</a> &nbsp;
 <a href="faq.html">Return to the EGCS FAQ</a>
-<p><i>Last modified:  March  3, 1999</i>
+<p><i>Last modified:  March  7, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
