--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -5,7 +5,7 @@
 <body>
 <h1 align="center">egcs-1.1.2</h1>
 
-<p>February 28, 1999
+<p>March 15, 1999
 
 <p>We are pleased to announce the release of egcs-1.1.2.
 
@@ -24,8 +24,7 @@ serious problems in egcs-1.1.1.
 
     <li> Fix infinite recursion in alias analysis and combiner code.
 
-    <li> Fix bug in regclass preferencing which caused incorrect code
-	 generation on the PowerPC and potentially elsewhere.
+    <li> Fix bug in regclass preferencing.
 
     <li> Fix incorrect loop reversal which caused incorrect code to
 	 be generated for several targets.
@@ -70,7 +69,20 @@ serious problems in egcs-1.1.1.
     <li> Avoid setting bogus RPATH environemnt variable during bootstrap.
 
     <li> Avoid GNU-make dependencies in the texinfo subdir.
-  </ul>
+
+    <li> Install CPP wrapper script in $(prefix)/bin if --enable-cpp.
+	 --enable-cpp=<dirname> can be used to specify an additional install
+	 directory for the cpp wrapper script.
+
+    <li> Fix CSE bug which caused incorrect label-label refs to appear on
+	 some platforms.
+
+    <li> Avoid linking in EH routines from libgcc if they are not needed.
+
+    <li> Avoid obscure bug in aliasing code.
+
+    <li> Fix bug in weak symbol handling.
+
   <li> Platform-specific improvements and fixes
   <ul>
     <li> Fix detection of PPro/PII on Unixware 7.
@@ -112,6 +124,21 @@ serious problems in egcs-1.1.1.
     <li> Fix incorrect "braf" instruction usage for the SH port.
 
     <li> Fix minor bug in va-sh which prevented its use with -ansi.
+
+    <li> Fix problems recognizing and supporting FreeBSD.
+
+    <li> Handle OpenBSD systems correctly.
+
+    <li> Minor fixincludes fix for Digital UNIX 4.0B.
+
+    <li> Fix problems with ctors/dtors in SCO shared libraries.
+
+    <li> Abort instead of generating incorrect code for PPro/PII floating
+	 point conditional moves.
+
+    <li> Avoid multiply defined symbols on Linux/GNU systems using libc-5.4.xx.
+  </ul>
+
 
   </ul>
   <li> Fortran-specific fixes
@@ -163,7 +190,7 @@ provided by Stanford)</a> -->
 <a href="../mirrors.html">mirror sites</a>.
 
 <hr>
-<i>Last modified on February 22, 1999.</i>
+<i>Last modified on March 7, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
