Reference egcs configure/build/install documentation

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -8,6 +8,7 @@
 <h1 align="center">egcs online documentation</h1>
 
 <ul>
+  <li> <a href="../install/index.html"> egcs Installation Instructions</a>
   <li> <a href="gcc_toc.html"> GCC Manual</a>
   <li> <a href="g77_toc.html"> G77 Manual</a>
   <ul> 
