--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -61,14 +61,16 @@ may have changed since you last visited this page.
 <p>When posting messages, please select an appropriate list for the message
 and try to avoid cross posting a message to several lists.
 
-<p>Web archives for all mailing lists are on-line;
+<p>Web archives for all mailing lists are on-line
+(<a href="http://egcs.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
 <a href="http://egcs.cygnus.com/ml/egcs/">egcs</a>,
-<a href="http://egcs.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
-and
 <a href="http://egcs.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>,
-<a href="http://egcs.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>,
-<a href="http://egcs.cygnus.com/ml/egcs-patches/">egcs-patches</a>.
-<a href="http://egcs.cygnus.com/ml/egcs-testresults/">egcs-testresults</a>.
+<a href="http://egcs.cygnus.com/ml/egcs-patches/">egcs-patches</a>,
+<a href="http://egcs.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>, and
+<a href="http://egcs.cygnus.com/ml/egcs-testresults/">egcs-testresults</a>),
+plus you can also <a href="ftp://egcs.cygnus.com/pub/egcs/mail-archives/">
+download mbox formatted archives of each mailing list</a>.
+
 The archives are
 <a href="http://bitrange.com/egcs/search.html">searchable</a>.
 
@@ -99,7 +101,7 @@ to
 <hr>
 <a name="glimpsebox"></a>
 
-<p><i>Last modified:  February  8, 1999</i>
+<p><i>Last modified:  March  9, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
