--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,7 +82,7 @@ Christian Bruel and Jeff Law donate improved
 
 </dl>
 
-<br><a href="news.html">Older news and announcements...</a>
+<a href="news.html">Older news and announcements...</a>
 <br><a href="onlinedocs/g77_news.html">Fortran news</a>
 
 <h2>FAQ</h2>
@@ -149,7 +149,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on March 7, 1999.</i>
+<i>Last modified on March  9, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
