--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -83,6 +83,9 @@ Successful
 <p><b>mips-sgi-irix6.5</b><br>
 Successful
 
+<p><b>m68k-next-nextstep3</b><br>
+Successful
+
 <p><b>powerpc-unknown-linux-gnulibc1</b> <br>
 Successful
 
