--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -16,11 +16,13 @@ be found in <i>prefix</i>/bin where <i>prefix</i> is the value you specified
 with the --prefix to configure (or /usr/local by default).
 
 <p>If you don't mind, please quickly review the <a
-href="../egcs-1.1/buildstat.html"> build status page.</a> If your
-system is not listed, send a note to <a href="mailto:egcs@egcs.cygnus.com">
-egcs@egcs.cygnus.com</a> indicating that you successfully built and
-installed egcs.  Include the output from running <i>srcdir</i>/config.guess.
-(Do not send us the config.guess file itself, just the output from running
+href="http://egcs.cygnus.com/egcs-1.1/buildstat.html">build status page</a>.
+If your system is not listed, send a note to
+<a href="mailto:egcs@egcs.cygnus.com">egcs@egcs.cygnus.com</a> indicating
+that you successfully built and installed egcs.
+
+Include the output from running <i>srcdir</i>/config.guess.  (Do not
+send us the config.guess file itself, just the output from running
 it!)
 
 <p>If you find a bug in egcs, please report it to
@@ -28,7 +30,7 @@ it!)
 
 <p>
 <hr>
-<i>Last modified on March  1, 1999.</i>
+<i>Last modified on March  9, 1999.</i>
 
 </body>
 </html>
