Directly refer the page with known bugs.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -94,7 +94,8 @@ href="faq.html">the FAQ</a> to see if the question has already been
 answered.</p>
 
 <p>We also offer an up-to-date version of the <a href="install/index.html">
-installation instructions and platform specific notes</a>.
+installation instructions and platform specific notes</a> and a <a
+href="bugs.html">list of known bugs</a>.
 
 
 <h2>Mailing Lists</h2>
