Bug reporting update from Alexandre.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -276,9 +276,12 @@ file with one of the popular compression programs such as <tt>gzip</tt>,
 <tt>bzip2</tt>, <tt>compress</tt> or <tt>pkzip</tt>, then include the
 compressed CPP output as an attachment to your message.
 
-<p>The egcs lists have message size limits (40 kbytes) and uncompressed bug
-reports over those limits will be bounced.  Most compressed but reports are
-allowed to exceed the limits unless they are unreasonably huge.
+<p>The egcs lists have message size limits (100 kbytes) and bug reports
+over those limits will currently be bounced.  We're trying to find a
+way to allow larger bug reports to be posted, but this is currently
+impossible.  So, although we prefer to have complete bug reports
+archived, if you cannot reduce the bug report below the limit, please
+make it available for ftp or http and post the URL.
 
 
 <hr>
