--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -42,7 +42,7 @@ maintain and improve quality.
 <dd> 
 <a href="http://www.cygnus.com/">Cygnus</a> donates
 <a href="cprop.html">improved global constant propagation"</a> and
-<a href="lcm.html">lazy code motion optimizer framework</a>."
+<a href="lcm.html">lazy code motion optimizer framework</a>.
 </dd>
 
 <dt><b>March 7, 1999</b></dt>
