Another typo.  Some days I just shouldn't be allowed to hack :-)

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -41,7 +41,7 @@ maintain and improve quality.
 <dt><b>March 10, 1999</b></dt>
 <dd> 
 <a href="http://www.cygnus.com/">Cygnus</a> donates
-<a href="cprop.html">improved global constant propagation"</a> and
+<a href="cprop.html">improved global constant propagation</a> and
 <a href="lcm.html">lazy code motion optimizer framework</a>.
 </dd>
 
