--- a/htdocs/chill.html
+++ b/htdocs/chill.html
@@ -24,8 +24,8 @@ the language, with some backwards compatibility options for
 the 1984 version, and some other extensions.  However, it
 does not implement all of the features of any standard.
 The most recent standard is Z.200 (11/93) available from
-<a href="http://www.itu.int/itudoc/itu-t/rec/z.html">
-http://www.itu.int/itudoc/itu-t/rec/z.html</a>.
+<a href="http://www.itu.int/itudoc/itu-t/rec/z/">
+http://www.itu.int/itudoc/itu-t/rec/z/</a>.
 
 The GNU Chill implementation is not being actively developed.
 Cygnus has one customer we are maintaining Chill for,
@@ -56,6 +56,4 @@ Tiemann, and David Brolley.
 </pre>
 
 <hr>
-<i>Last modified on August 29, 1998.</i>
-
-
+<i>Last modified on March 13, 1999.</i>
