Update for egcs-1.1.2 release.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -28,7 +28,7 @@ We want those releases to work well on a variety of native (including
 GNU/Linux) and cross targets and use an extensive <a href="testresults/">test
 suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
 maintain and improve quality.
-<a href="egcs-1.1/egcs-1.1.1.html">egcs-1.1.1</a> is the current release.
+<a href="egcs-1.1/egcs-1.1.2.html">egcs-1.1.2</a> is the current release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
@@ -38,7 +38,11 @@ maintain and improve quality.
 
 <dl>
 
-<dt><b>March 10, 1999</b></dt>
+<dt><b>March 15, 1999</b></dt>
+<dd>
+<a href="egcs-1.1/egcs-1.1.2.html"><b>egcs-1.1.2 is released</b></a>.
+</dd>
+
 <dd> 
 <a href="http://www.cygnus.com/">Cygnus</a> donates
 <a href="cprop.html">improved global constant propagation</a> and
