--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,6 +43,7 @@ maintain and improve quality.
 <a href="egcs-1.1/egcs-1.1.2.html"><b>egcs-1.1.2 is released</b></a>.
 </dd>
 
+<dt><b>March 10, 1999</b></dt>
 <dd> 
 <a href="http://www.cygnus.com/">Cygnus</a> donates
 <a href="cprop.html">improved global constant propagation</a> and
