--- a/htdocs/egcs-1.1/caveats.html
+++ b/htdocs/egcs-1.1/caveats.html
@@ -24,7 +24,7 @@
   or deprecated C++ constructs than g++-2.7, g++-2.8 or egcs-1.0.  As a result
   it may be necessary to fix C++ code before it will compile with egcs.
 
-  <li>G++ is also aggressively tracking the C++ standard; as a result code
+  <li>G++ is also converting toward the ISO C++ standard; as a result code
   which was previously valid (and thus accepted by other compilers and older
   versions of g++) may no longer be accepted.
 
@@ -34,7 +34,7 @@
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  August 29, 1998</i>
+<p><i>Last modified:  March 15, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
