Mention last-minute libg2c fix

--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -146,6 +146,10 @@ serious problems in egcs-1.1.1.
   </ul>
   <li> Fortran-specific fixes
   <ul>
+    <li> Fix the <SAMP>IDate</SAMP> intrinsic (VXT) (in <CODE>libg2c</CODE>)
+         so the returned year is in the documented, non-Y2K-compliant range
+	 of 0-99, instead of being returned as 100 in the year 2000.
+
     <li> Fix the <SAMP>`Date_and_Time'</SAMP> intrinsic (in
          <CODE>libg2c</CODE>) to return the milliseconds value properly
          in <VAR>Values</VAR>(8).
@@ -193,7 +197,7 @@ provided by Stanford)</a> -->
 <a href="../mirrors.html">mirror sites</a>.
 
 <hr>
-<i>Last modified on March 7, 1999.</i>
+<i>Last modified on March 17, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
